test/binaryOperators2.slq

def main(){
	b:=0:𝔹;
	s:=1:int[16];
	u:=2:uint[16];
	bc:=0:!𝔹;
	n:=3:!ℕ;
	z:=-3:!ℤ;
	q:=1/2:!ℚ;
	r:=4.5:!ℝ;
	// c:=0:!ℂ;
	
	abb:=b+b; // error
	abs:=b+s;
	abu:=b+u;
	abbc:=b+bc; // error
	abn:=b+n; // error
	abz:=b+z; // error
	abq:=b+q; // error
	abr:=b+r; // error
	asb:=s+b:int[16];
	ass:=s+s:int[16];
	asu:=s+u; // error
	asbc:=s+bc:int[16];
	asn:=s+n:int[16];
	asn₂:=s+1:int[16];
	asz:=s+z:int[16];
	asz₂:=s+-1:int[16];
	asq:=s+q; // error
	asr:=s+r; // error
	aub:=u+b:uint[16];
	aus:=u+s; // error
	auu:=u+u:uint[16];
	aubc:=u+bc:uint[16];
	aun:=u+n:uint[16];
	aun₂:=u+1:uint[16];
	auz:=u+z:uint[16];
	auz₂:=u+-1:uint[16];
	auq:=u+q;// error
	aur:=u+r; // error	
	abcb:=bc+b; // error
	abcs:=bc+s:int[16];
	abcu:=bc+u:uint[16];
	abcbc:=bc+bc:!ℕ;
	abcn:=bc+n:!ℕ;
	abcz:=bc+z:!ℤ;
	abcq:=bc+q:!ℚ;
	abcr:=bc+r:!ℝ;
	anb:=n+b; // error
	ans:=n+s:int[16];
	ans₂:=1+s;
	anu:=n+u:uint[16];
	anu₂:=1+u;
	anbc:=n+bc:!ℕ;
	ann:=n+n:!ℕ;
	anz:=n+z:!ℤ;
	anq:=n+q:!ℚ;
	anr:=n+r:!ℝ;
	azb:=z+b; // error
	azs:=z+s:int[16];
	azs₂:=-1+s:int[16];
	azu:=z+u:uint[16];
	azu₂:=-1+u:uint[16];
	azbc:=z+bc:!ℤ;
	azn:=z+n:!ℤ;
	azz:=z+z:!ℤ;
	azq:=z+q:!ℚ;
	azr:=z+r:!ℝ;
	aqb:=q+b; // error
	aqs:=q+s; // error
	aqu:=q+u; // error
	aqbc:=q+bc:!ℚ;
	aqn:=q+n:!ℚ;
	aqz:=q+z:!ℚ;
	aqq:=q+q:!ℚ;
	aqr:=q+r:!ℝ;
	arb:=r+b; // error
	ars:=r+s; // error
	aru:=r+u; // error
	arbc:=r+bc:!ℝ;
	arn:=r+n:!ℝ;
	arz:=r+z:!ℝ;
	arq:=r+q:!ℝ;
	arr:=r+r:!ℝ;
	
	sbb:=b-b; // error
	sbs:=b-s;
	sbu:=b-u;
	sbbc:=b-bc; // error
	sbn:=b-n; // error
	sbz:=b-z; // error
	sbq:=b-q; // error
	sbr:=b-r; // error
	ssb:=s-b:int[16];
	sss:=s-s:int[16];
	ssu:=s-u; // error
	ssbc:=s-bc:int[16];
	ssn:=s-n:int[16];
	ssn₂:=s-1:int[16];
	ssz:=s-z:int[16];
	ssz₂:=s- -1:int[16];
	ssq:=s-q;// error
	ssr:=s-r; // error
	sub:=u-b:uint[16];
	sus:=u-s; // error
	suu:=u-u:uint[16];
	sun:=u-n:uint[16];
	sun₂:=u-1:uint[16];
	suz:=u-z:uint[16];
	suz₂:=u - -1:uint[16];
	suq:=u-q;// error
	sur:=u-r; // error	
	sbcb:=bc-b; // error
	sbcs:=bc-s;
	sbcu:=bc-u;
	sbcbc:=bc-bc:!ℤ;
	sbcn:=bc-n:!ℤ;
	sbcz:=bc-z:!ℤ;
	sbcq:=bc-q:!ℚ;
	sbcr:=bc-r:!ℝ;
	snb:=n-b; // error
	sns:=n-s:int[16];
	sns₂:=1-s;
	snu:=n-u:uint[16];
	snu₂:=1-u;
	snbc:=n-bc:!ℤ;
	snn:=n-n:!ℤ;
	snz:=n-z:!ℤ;
	snq:=n-q:!ℚ;
	snr:=n-r:!ℝ;
	szb:=z-b; // error
	szs:=z-s:int[16];
	szs₂:=-1-s:int[16];
	szu:=z-u:uint[16];
	szu₂:=-1-u:uint[16];
	szbc:=z-bc:!ℤ;
	szn:=z-n:!ℤ;
	szz:=z-z:!ℤ;
	szq:=z-q:!ℚ;
	szr:=z-r:!ℝ;
	sqb:=q-b; // error
	sqs:=q-s; // error
	squ:=q-u; // error
	sqbc:=q-bc:!ℚ;
	sqn:=q-n:!ℚ;
	sqz:=q-z:!ℚ;
	sqq:=q-q:!ℚ;
	sqr:=q-r:!ℝ;
	srb:=r-b; // error
	srs:=r-s; // error
	sru:=r-u; // error
	srbc:=r-bc:!ℝ;
	srn:=r-n:!ℝ;
	srz:=r-z:!ℝ;
	srq:=r-q:!ℝ;
	srr:=r-r:!ℝ;

	nsbb:=b sub b:𝔹;
	ssmall:=-2:int[16];
	nsbs:=b sub ssmall:uint[16];
	usmall:=0:uint[16];
	nsbu:=b sub usmall:uint[16];
	nsbbc:=b sub bc:𝔹;
	nsbn:=b sub n:𝔹;
	nsbz:=b sub z; // error
	nsbq:=b sub q; // error
	nsbr:=b sub r; // error
	nssb:=s sub b:uint[16];
	nsss:=s sub s:uint[16];
	nssu:=s sub u; // error
	nssbc:=s sub bc:uint[16];
	nsmall:=0:!ℕ;
	nssn:=s sub nsmall:uint[16];
	nssn₂:=s sub 1:uint[16];
	nssz:=s sub z:uint[16];
	nssz₂:=s sub -1:uint[16];
	nssq:=s sub q;// error
	nssr:=s sub r; // error
	nsub:=u sub b:uint[16];
	nsus:=u sub s; // error
	nsuu:=u sub u:uint[16];
	nsubc:=u sub bc:uint[16];
	nsun:=u sub nsmall;
	nsun₂:=u sub 1:uint[16];
	nsuz:=u sub z:uint[16];
	nsuz₂:=u sub -1:uint[16];
	nsuq:=u sub q;// error
	nsur:=u sub r; // error	
	nsbcb:=bc sub b;
	nsbcs:=bc sub ssmall:uint[16];
	nsbcu:=bc sub usmall:uint[16];
	nsbcbc:=bc sub bc:!ℕ;
	nsbcn:=bc sub nsmall:!𝔹;
	nsbcz:=bc sub z:!ℤ;
	nsbcq:=bc sub q:!ℚ; // error
	nsbcr:=bc sub r:!ℝ; // error
	nsnb:=n sub b; // error
	nsns:=n sub s:uint[16];
	nsns₂:=1 sub s:uint[16];
	nsnu:=n sub u:uint[16];
	nsnu₂:=10 sub u;
	nsnbc:=n sub bc:!ℕ;
	nsnn:=n sub n:!ℕ;
	nsnz:=n sub z:!ℤ;
	nsnq:=n sub q; // error
	nsnr:=n sub r; // error
	nszb:=z sub b; // error
	zlarge:=-(-10):!ℤ;
	nszs:=zlarge sub s:uint[16];
	nszs₂:=-1 sub ssmall:uint[16];
	nszu:=zlarge sub u:uint[16];
	nszu₂:=-(-10) sub u:uint[16];
	nszbc:=zlarge sub bc:!ℤ;
	nszn:=zlarge sub n:!ℤ;
	nszz:=zlarge sub z:!ℤ;
	nszq:=z sub q; // error
	nszr:=z sub r; // error
	nsqb:=q sub b; // error
	nsqs:=q sub s; // error
	nsqu:=q sub u; // error
	nsqbc:=q sub bc; // error
	nsqn:=q sub n; // error
	nsqz:=q sub z; // error
	nsqq:=q sub q; // error
	nsqr:=q sub r; // error
	nsrb:=r sub b; // error
	nsrs:=r sub s; // error
	nsru:=r sub u; // error
	nsrbc:=r sub bc; // error
	nsrn:=r sub n; // error
	nsrz:=r sub z; // error
	nsrq:=r sub q; // error
	nsrr:=r sub r; // error
}
